# QMC_Master

./: CMakeLists.txt  README.md
MPI_QMC_Master/: MPIHelperClasses.h  MPIServer.h  MPITypeDeduction.h
SDL_QMC_Master/: NetCommonBase.h  NetServer.h  SDLServer.h  qmc_master.cpp  registry.cpp  stripped_SDL_Net.h  utility.h
common/: AverageSign.h  ClientState.h  Error_Analysis.h  Master.h  NetError.h  ParallelServer.h  analysis_functions.h  bootstrap.h  errordata.h  filevector.h  jackknife.h  observable.h  registry.h  scalar_observable.h
